--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,9 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
 orbs:
   docker: circleci/docker@1.7.0
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
-jobs:
-  example-job:
-    docker:
-      - image: cimg/base:stable
-    steps:
-      - docker/check:
-          use-docker-credentials-store: false
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  example-workflow:
+  build-docker-image-only:
     jobs:
-      - example-job
       - docker/publish:
           image: f512/kamulyo-pelayanan
-          lint-dockerfile: false
-          use-remote-docker: false
+          update-description: true
