--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,27 +1,22 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
-
 orbs:
   docker: circleci/docker@1.7.0
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  check-docker:
-    docker:
-      - image: cimg/base:stable
+  build-and-push:
+    executor: docker/docker
     steps:
-      - docker/check:
-          use-docker-credentials-store: false
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
-workflows:
-  build-and-deploy:
-    jobs:
-      - check-docker
-      - docker/publish:
+      - setup_remote_docker
+      - checkout
+      - docker/check
+      - docker/build:
           image: f512/kamulyo-pelayanan
-          lint-dockerfile: false
-          use-remote-docker: false
+      - docker/push:
+          digest-path: /tmp/digest.txt
+          image: f512/kamulyo-pelayanan
+      - run:
+          command: |
+            echo "Digest is: $(</tmp/digest.txt)"
+workflows:
+  commit:
+    jobs:
+      - build-and-push
