--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,10 @@
 version: 2.1
 orbs:
   docker: circleci/docker@1.7.0
-jobs:
-  build-and-push:
-    executor: docker/docker
-    steps:
-      - setup_remote_docker
-      - checkout
-      - docker/check
-      - docker/build:
-          image: f512/kamulyo-pelayanan
-      - docker/push:
-          digest-path: /tmp/digest.txt
-          image: f512/kamulyo-pelayanan
-      - run:
-          command: |
-            echo "Digest is: $(</tmp/digest.txt)"
+
 workflows:
   commit:
     jobs:
-      - build-and-push
+      - docker/publish:
+          deploy: true
+          image: f512/kamulyo-pelayanan
