--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,3 +8,4 @@ workflows:
       - docker/publish:
           deploy: true
           image: f512/kamulyo-pelayanan
+          use-remote-docker: true
