--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,11 @@
 version: 2.1
 orbs:
-  docker: circleci/docker@1.7.0
+  docker: circleci/docker@2.2.0
 
 workflows:
   commit:
     jobs:
       - docker/publish:
           deploy: true
-          image: f512/kamulyo-pelayanan
-          tag: latest
+          image: 'f512/kamulyo-pelayanan'
+          use-remote-docker: true
