--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,5 +6,6 @@ workflows:
   commit:
     jobs:
       - docker/publish:
-          image: 'f512/kamulyopelayanan'
+          image: f512/kamulyo-pelayanan
+          tag: latest
           deploy: true
