Fix Zenziva WhatsApp OTP feature
Signed-off-by: Faiz Jazadi <me@lcat.dev>

--- a/example.env
+++ b/example.env
@@ -3,3 +3,6 @@ FLASK_SECRET_KEY='a secret only the dev team knows ;)'
 FLASK_HASHIDS_SALT='a salt only the chef knows ;)'
 FLASK_HASHIDS_MIN_LENGTH='4'
 FLASK_HASHIDS_ALPHABET='ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789'
+FLASK_ZENZIVA_USERKEY='1fe38f78f16d'
+FLASK_ZENZIVA_PASSKEY='c5b1b05740ee77eaa096df84'
+FLASK_REDIS_URL='redis://localhost:6379/0'
